--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     // Google Maps Location
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    // Maps SDK for Android Utility Library
+    implementation 'com.google.maps.android:android-maps-utils:1.1.0'
 
     // CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
